--- a/estilom.css
+++ b/estilom.css
@@ -137,11 +137,13 @@ footer {
 
 
 .logo-marca {
+  position: fixed;
   top: 10px;
-  left: 20px;    
-  height: 87px;   
-  z-index: 1000;   
+  left: 20px;
+  height: 87px;
+  z-index: 1000;
 }
+
 
 
 
@@ -178,4 +180,5 @@ footer {
   font-size: 12px;
   color: #aaa;
 }
+
 
