--- a/estilom.css
+++ b/estilom.css
@@ -9,6 +9,7 @@ header {
   color: #fff;
   padding: 30px 0 20px 0;
   text-align: center;
+  positon: fixed;
 }
 header h1 {
   margin: 0;
@@ -180,5 +181,6 @@ footer {
   font-size: 12px;
   color: #aaa;
 }
+
 
 
